--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDB": "Server=FANCY-LAPTOP\\DATABASES;uid=sa;pwd=12345;database=CampusFoodSystem;TrustServerCertificate=True"
+    "LocalDB": "Server=MINH\\SQLEXPRESS;uid=sa;pwd=123456;database=CampusFoodSystem;TrustServerCertificate=True;Trusted_Connection=True"
   },
   "JWT": {
     "ValidAudience": "MyLocalAudience",
