--- a/Apis/SWD392_BE.Services/SWD392_BE.Services.csproj
+++ b/Apis/SWD392_BE.Services/SWD392_BE.Services.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\SWD392_BE.Repositories\SWD392_BE.Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
