--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -6,9 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "LocalDB": "Server=MINH\\SQLEXPRESS;uid=sa;pwd=123456;database=CampusFoodSystem;TrustServerCertificate=True;Trusted_Connection=True"
+    "LocalDB": "Server=tcp:sqldatabase-swd.database.windows.net,1433;Initial Catalog=CampusFoodSystem;Persist Security Info=False;User ID=Linh;Password=admin12345@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  
+
   "JWT": {
     "ValidAudience": "MyLocalAudience",
     "ValidIssuer": "MyLocalIssuser",
