--- a/Apis/SWD392_BE.Repositories/SWD392_BE.Repositories.csproj
+++ b/Apis/SWD392_BE.Repositories/SWD392_BE.Repositories.csproj
@@ -23,10 +23,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Utils\" />
+    <Folder Include="ViewModels\NewFolder\" />
   </ItemGroup>
 
 </Project>
