--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -8,10 +8,10 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    //"LocalDB": "Server=tcp:sqldatabase-swd.database.windows.net,1433;Initial Catalog=CampusFoodSystem;Persist Security Info=False;User ID=Linh;Password=admin12345@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "LocalDB": "Server=tcp:sqldatabase-swd.database.windows.net,1433;Initial Catalog=CampusFoodSystem;Persist Security Info=False;User ID=Linh;Password=admin12345@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
 
-    "LocalDB": "Server=DESKTOP-DCQIVA4;uid=sa;pwd=12345;database=CampusFoodSystem;TrustServerCertificate=True;Trusted_Connection=True"
+    //"LocalDB": "Server=DESKTOP-DCQIVA4;uid=sa;pwd=12345;database=CampusFoodSystem;TrustServerCertificate=True;Trusted_Connection=True"
 
   },
 
