feat/reset password

--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "EmailSettings": {
+    "EmailHost": "smtp-mail.outlook.com",
+    "EmailPort": 587,
+    "EmailUserName": "minasmath198@outlook.com",
+    "EmailPassword": "minhtam1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
