--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "AllowedHosts": "*",
-  "GCPStorageAuthFile": "D:\\swp392-be-23df84c9fdd8.json",
+  "GCPStorageAuthFile": "D:\\SWD\\BE\\Apis\\SWD392_BE.Repositories\\Helper\\ggjson\\swp392-be-23df84c9fdd8.json",
   "GoogleCloudStorageBucketName": "swp392-bucket",
 
   "ConnectionStrings": {
