--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "GCPStorageAuthFile": "D:\\Code semester 7th\\SWD392\\Cloudkey.json",
+  "GoogleCloudStorageBucketName": "swp392-bucket",
 
   "ConnectionStrings": {
     "LocalDB": "Server=swdproject.database.windows.net,1433;Initial Catalog=CampusFoodSystem;Persist Security Info=False;User ID=linhdeptrai;Password=admin12345@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
