--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -12,8 +12,13 @@
     }
   },
   "AllowedHosts": "*",
-  "GCPStorageAuthFile": "D:\\SWD\\BE\\Apis\\SWD392_BE.Repositories\\Helper\\ggjson\\swp392-be-23df84c9fdd8.json",
-  "GoogleCloudStorageBucketName": "swp392-bucket",
+  
+    "GCSConfigOptions": {
+      "GCPStorageAuthFile": "D:\\SWD\\BE\\Apis\\SWD392_BE.Repositories\\Helper\\ggjson\\swp392-be-23df84c9fdd8.json",
+      "GoogleCloudStorageBucketName": "swp392-bucket"
+    },
+  
+
 
   "ConnectionStrings": {
     "LocalDB": "Server=swdproject.database.windows.net,1433;Initial Catalog=CampusFoodSystem;Persist Security Info=False;User ID=linhdeptrai;Password=admin12345@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
