--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -35,9 +35,9 @@
   },
 
   "VNPAY": {
-    "TmnCode": "4GK8AEWB",
-    "HashSecret": "P6XYWFTWU3Z6IRKEHMPV6OQIBW2Y9F43",
+    "TmnCode": "CA7EZUZY",
+    "HashSecret": "IOACKGOPU0DSSB2UBRMFPVJ642X92RHQ",
     "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://localhost:5001/api/v1/payment/vnpay-return"
+    "ReturnUrl": "https://localhost:7253/api/v1/payment/vnpay_return"
   }
 }
