fix/deploy link vnpay

--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -38,6 +38,6 @@
     "TmnCode": "CA7EZUZY",
     "HashSecret": "IOACKGOPU0DSSB2UBRMFPVJ642X92RHQ",
     "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://localhost:7253/api/v1/payment/url"
+    "ReturnUrl": "https://nom-nom-deli.azurewebsites.net/api/v1/payment/url"
   }
 }
