--- a/.gitignore
+++ b/.gitignore
@@ -560,3 +560,5 @@ fabric.properties
 **/.idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/rider
+/Apis/SWD392_BE.API/appsettings.json
+/.gitignore
