--- a/Apis/SWD392_BE.API/appsettings.json
+++ b/Apis/SWD392_BE.API/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "GCSConfigOptions": {
-    "GCPStorageAuthFile": "D:\\SWD\\BE\\Apis\\SWD392_BE.Repositories\\Helper\\ggjson\\swp392-be-fbceb354a591.json",
+    "GCPStorageAuthFile": "D:\\Code semester 7th\\SWD392\\SWD392-BE\\Apis\\SWD392_BE.Repositories\\Helper\\ggjson\\swp392-be-c139fa58faa2.json",
     "GoogleCloudStorageBucketName": "swp392-bucket"
   },
 
