--- a/Apis/SWD392_BE.Services/SWD392_BE.Services.csproj
+++ b/Apis/SWD392_BE.Services/SWD392_BE.Services.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FirebaseAdmin" Version="3.0.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
     <PackageReference Include="MailKit" Version="4.6.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
